added golden ticket generators added sendjdf servlet cleanup
git-svn-id: http://svn.cip4.org/svnroot/trunk@2580 25ee8a6d-831b-0410-907a-ff8528d65d49